<resources>
    <string name="app_name">My ApplicationTest</string>
    <string name="edit_message">Enter message</string>
    <string name="button_send">Send</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="BtnLogin">Войти</string>
    <string name="BtnSettings">Настройки Базы Данных</string>
    <string name="BtnSaveLoginPassword">Сохранить логин и пароль</string>
    <string name="db_name">Имя Базы Данных</string>
    <string name="db_user">Пользователь Базы Данных</string>
    <string name="db_password">Пароль Базы Данных</string>
    <string name="btnDBSettingsSave">Сохранить настройки БД</string>
    <string name="btnInvoice">Создать накладную</string>
    <string name="btnPayments">Просмотр платежей</string>
    <string name="btnSalesPartners">Добавить контрагента</string>
    <string name="btnNext">Фильтр</string>
    <string name="btnNextFilterSecond">Создать</string>
    <string name="editTextQuantity">Кол-во</string>
    <string name="editTextExchange">Обмен:</string>
    <string name="editTextReturn">Возврат:</string>
    <string name="editTextSurplus">Остаток:</string>
    <string name="btnAddItem">Добавить</string>
    <string name="btnRemoveItem">Удалить</string>
    <string name="btnMakePayment">Оплатить</string>
    <string name="btnSaveRecord">Записать</string>
    <string name="editTextSearch">Поиск по списку</string>
    <string name="textViewReceivedPrice">Цена</string>
    <string name="textViewDiscountValue">Скидка</string>
    <string name="textViewDiscountType">Тип Скидки</string>
    <string name="btnReceivePrice">Получить информацию о цене и скидке</string>
    <string name="textViewLabelTotalSum">Всего:</string>
    <string name="textViewLabelSuplus">Остаток:</string>
    <string name="editTextPaymentAmount">Сумма Внесения</string>
    <string name="dateStart">Начало</string>
    <string name="dateEnd">Конец</string>
    <string name="btnReceiveListOfDebts">Получить список долгов</string>
    <string name="btnClearListOfDebtors">Очистить список</string>
    <string name="btnMakePaymentDebtor">Внести платёж</string>
    <string name="textViewTotalDebt">Весь долг</string>
    <string name="textViewInvoiceDebt">Долг по накладной</string>
    <string name="btnSelect">Подробно</string>
    <string name="btnViewInvoice">Просмотреть накладную</string>
    <string name="editTextPaymentSum">Сумма внесения:</string>
    <string name="editTextSearchDebtor">Поиск</string>
    <string name="btnViewInvoices">Просмотр накладных</string>
    <string name="btnChangePrices">Изменить цены</string>
    <string name="btnReports">Отчёты</string>
    <string name="btnChooseArea">Район</string>
    <string name="btnChooseRoot">Маршрут</string>
    <string name="btnChooseAccountingType">Учёт</string>
    <string name="textViewFilterTabLabel">Название Раздела</string>
    <string name="btnInvoiceTypeTwo">Непровод</string>
    <string name="btnInvoiceTypeOne">Провод</string>
    <string name="btnNextToInvoice">Далее</string>
    <string name="textViewPriceLabel">Цена:</string>
    <string name="editTextQuantityLabel">Количество:</string>
    <string name="btnChangePrice">Изменить цену</string>
    <string name="textViewItemNameLabel">Наименование:</string>
    <string name="btnUpdateLocalDB">Обновить Локальную БД</string>
    <string name="btnClearLocalDB">Очистить локальные таблицы</string>
    <string name="textViewDateTimeDocServerLabel">Дата на сервере:</string>
    <string name="textViewDateTimeDocLocalLabel">Дата создания:</string>
    <string name="textViewInvoiceNumberServerLabel">Номер на сервере:</string>
    <string name="textViewAccountingTypeLabel">Тип учёта:</string>
    <string name="textViewSalesPartnerLabel">Контрагент:</string>
    <string name="textViewPaymentStatusLabel">Статус оплаты:</string>
    <string name="btnInvoicesFilterComplete">Фильтр подробный</string>
    <string name="btnInvoicesFilterSPName">Фильтр по контрагенту</string>
    <string name="btnInvoicesSynced">За сегодня. Синхронизированные</string>
    <string name="btnInvoicesNotSynced">за сегодня. несинхронизированные</string>
    <string name="btnSyncInvoicesWithServer">Синхронизировать</string>
    <string name="textViewInvoiceSum">Сумма по накладной:</string>
    <string name="textViewInvoicesTotal">Всего накладных:</string>
    <string name="textViewInvoicesTotalSum">На сумму:</string>
    <string name="textViewInvoicesTotalTypeOne">Проводных:</string>
    <string name="textViewInvoicesTotalTypeTwo">Непроводных:</string>
    <string name="btnPaymentsShowAll">За сегодня. Показать все</string>
    <string name="btnMakePaymentToday">За сегодня. Внести платёж</string>
    <string name="paymentIDLocalLabel">Номер платежа:</string>
    <string name="invoiceNumberLabel">Номер накладной:</string>
    <string name="editTextComment">Введите название нового магазина</string>
    <string name="btnChangeNotSynced">Изменить несинхронизированные</string>
    <string name="textViewInvoicesDebtQuantity">Реал:</string>
    <string name="textViewInvoicesCashLabel">Налом сразу:</string>
    <string name="btnReceive">Загрузка товара</string>
    <string name="btnNewReceive">Новая загрузка</string>
    <string name="btnAllReceives">Все загрузки</string>
    <string name="editTextSetQuantity">Введите количество</string>
    <string name="textViewAgentName">Имя Агента</string>
    <string name="editTextDateStart">Дата: начало периода</string>
    <string name="editTextDateEnd">Дата: конец периода</string>
    <string name="btnOptions">дополнительно</string>

</resources>
