<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewInvoicesMenuActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonInvoicesNotSynced"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/btnInvoicesNotSynced"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="154dp" />

            <Button
                android:id="@+id/buttonChangeInvoicesNotSynced"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/btnChangeNotSynced"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="154dp" />

            <Button
                android:id="@+id/buttonInvoicesSynced"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/btnInvoicesSynced"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="381dp" />

            <Button
                android:id="@+id/buttonInvoicesFilterSPName"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/btnInvoicesFilterSPName"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonInvoicesFilterComplete"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/btnInvoicesFilterComplete"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>