<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPaymentsFilterSP">

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/btnNextToInvoice"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFilter" />

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/btnNext"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonShowMore" />

    <ListView
        android:id="@+id/listViewDebts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentSumLabel" />

    <Button
        android:id="@+id/buttonShowMore"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/btnSelect"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDebtor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDebtorLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDebtorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/textViewSalesPartnerLabel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPaymentSumLabel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/editTextPaymentSum"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDebtorLabel" />

    <EditText
        android:id="@+id/editTextPaymentSum"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:hint="@string/btnMakePaymentDebtor"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPaymentSumLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewDebtorLabel" />
</android.support.constraint.ConstraintLayout>