<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder">

    <TextView
        android:id="@+id/salesPartnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewSalesPartnerLabel"
        app:layout_constraintEnd_toStartOf="@+id/salesPartner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountingTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewAccountingTypeLabel"
        app:layout_constraintEnd_toStartOf="@+id/accountingType"
        app:layout_constraintTop_toBottomOf="@+id/salesPartnerLabel" />

    <TextView
        android:id="@+id/invoiceNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invoiceNumberLabel"
        app:layout_constraintEnd_toStartOf="@+id/invoiceNumber"
        app:layout_constraintTop_toBottomOf="@+id/accountingTypeLabel" />

    <TextView
        android:id="@+id/paymentIDLocalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/paymentIDLocalLabel"
        app:layout_constraintEnd_toStartOf="@+id/paymentIDLocal"
        app:layout_constraintTop_toBottomOf="@+id/invoiceNumberLabel" />

    <TextView
        android:id="@+id/invoiceSumLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewInvoiceSum"
        app:layout_constraintEnd_toStartOf="@+id/invoiceSum"
        app:layout_constraintTop_toBottomOf="@+id/paymentIDLocalLabel" />

    <TextView
        android:id="@+id/dateTimeDocLocalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewDateTimeDocLocalLabel"
        app:layout_constraintEnd_toStartOf="@+id/dateTimeDocLocal"
        app:layout_constraintTop_toBottomOf="@+id/paymentSumLabel" />

    <TextView
        android:id="@+id/dateTimeDocServerLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewDateTimeDocServerLabel"
        app:layout_constraintEnd_toStartOf="@+id/dateTimeDocServer"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeDocLocalLabel" />

    <TextView
        android:id="@+id/paymentSumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/editTextPaymentSum"
        app:layout_constraintEnd_toStartOf="@+id/paymentSum"
        app:layout_constraintTop_toBottomOf="@+id/invoiceSumLabel" />

    <TextView
        android:id="@+id/salesPartner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountingType"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salesPartner" />

    <TextView
        android:id="@+id/invoiceNumber"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountingType" />

    <TextView
        android:id="@+id/paymentIDLocal"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoiceNumber" />

    <TextView
        android:id="@+id/dateTimeDocServer"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeDocLocal" />

    <TextView
        android:id="@+id/dateTimeDocLocal"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentSum" />

    <TextView
        android:id="@+id/invoiceSum"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentIDLocal" />

    <TextView
        android:id="@+id/paymentSum"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoiceSum" />

</android.support.constraint.ConstraintLayout>